# rag-fusion

./: .gitignore  LICENSE  README.md  evaluate.py  main.py  pyproject.toml  query_cache.json  test_main.py
.claude/: settings.local.json
eval/: answer_eval.py  bootstrap_ci.py  dataset.py  eval_with_ci.py  metrics.py  qualitative.py  query_cache.py  rerank.py  retrieval.py  saved_queries.py  steelman.py  sweep.py
experiments/arxiv-2603-02153-replication/: README.md
experiments/arxiv-2603-02153-replication/results/: answer_eval_hybrid_n200.json  answer_eval_n200.json  headline_table_n200.json  qualitative.txt  steelman.json  steelman_base_n200.json  steelman_base_n200_full.json  steelman_flashrank_n1_n200.json  steelman_flashrank_n200.json  steelman_large.json  steelman_large_n200.json  steelman_large_n200_full.json  sweep.json  sweep_n200.json
tests/: conftest.py  test_setup_validation.py
